# CS48000DemoProject_Remade

./: .dockerignore  .env  .env.test  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docs/: tech_stack_decision_records.md
src/: __init__.py  logging_config.py
src/database/: connection.py
src/models/: models.py
src/services/: __init__.py  etl.py  services.py
test/: test_etl_and_services.py
tests/: conftest.py  test_database.py  test_e2e_pipeline.py  test_e2e_services.py  test_etl_and_services.py
