[tool.poetry]
name = "cs48000demoproject-remade"
version = "0.1.0"
description = ""
authors = ["Bradley Brenning <Brenbra132@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.54.0"
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
pandas = "^2.0"
python-dotenv = "^1.2"
sentry-sdk = "^2.54"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15"
mypy = "^1.19"
pytest-cov = "^7.0"
pytest-playwright = "^0.7"
pre-commit = "^4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"